@@ -1,3 +1,8 @@
+Sun Apr 20 13:51:11 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* upstream-trunk: Sync'd with
+	https://svn.code.sf.net/p/elftoolchain/code/trunk@r3028
+
 Sun Mar 23 15:10:30 CET 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* current-trunk: Merged from upstream-trunk.
